--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "firebase": "^9.6.1",
     "font-awesome": "^4.7.0",
     "ng-captcha": "^1.0.4",
     "ng-recaptcha": "^9.0.0",
